<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012-2013 Andrew Neal
     Copyright (C) 2012-2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">My Music</string>

    <!-- Page titles -->
    <string name="page_last_added">Last Added</string>
    <string name="page_playlists">Playlists</string>
    <string name="page_recent">Recent</string>
    <string name="page_artists">Artists</string>
    <string name="page_songs">Songs</string>
    <string name="page_albums">Albums</string>
    <string name="page_genres">Genres</string>

    <!-- Option menu items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_shuffle">Shuffle all</string>
    <string name="menu_play_all">Play all</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_shop">Shop for themes</string>
    <string name="menu_clear_queue">Clear queue</string>
    <string name="menu_save_queue">Save queue</string>
    <string name="menu_share">Share</string>
    <string name="menu_add_to_homescreen">Pin to home screen</string>
    <string name="menu_equalizer">Equalizer</string>
    <string name="menu_simple">Simple</string>
    <string name="menu_detailed">Detailed</string>
    <string name="menu_grid">Grid</string>
    <string name="menu_view_as">View as</string>

    <!-- Playlist items -->
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="remove_from_queue">Remove from queue</string>

    <!-- Sort orders -->
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_date_added">Date added</string>
    <string name="sort_order_entry_track_list">Track list</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>
    <string name="sort_order_entry_filename">Filename</string>

    <!-- Default playlist names -->
    <!-- playlist_favorite used in voice search processing only -->
    <string name="playlist_favorite">Favorite</string>
    <string name="playlist_favorites">Favorites</string>
    <string name="playlist_last_added">Last added</string>

    <!-- AlertDialog items -->
    <string name="new_empty_playlist">New empty playlist</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="overwrite">Overwrite</string>
    <string name="new_playlist_name_template">Playlist <xliff:g id="number">%d</xliff:g></string>
    <string name="create_playlist_prompt">Playlist name</string>
    <string name="delete_dialog_title">Delete <xliff:g id="item" example="album">%s</xliff:g>?</string>
    <string name="delete_files_title">Delete files</string>
    <string name="are_you_sure_delete_files_text">Are you sure you want to PERMANENTLY DELETE the selected files from your device?</string>
    <string name="cannot_be_undone">This cannot be undone</string>
    <string name="delete_warning">This will permanently delete the cached image entries</string>
    <string name="new_photo">Choose photo from Gallery</string>
    <string name="google_search">Google search</string>
    <string name="use_default">Use default photo</string>
    <string name="old_photo">Use old photo</string>

    <!-- Context menu items -->
    <string name="context_menu_play_selection">Play</string>
    <string name="context_menu_play_next">Play next</string>
    <string name="context_menu_more_by_artist">More by artist</string>
    <string name="context_menu_rename_playlist">Rename</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_fetch_album_art">Fetch album art</string>
    <string name="context_menu_fetch_artist_image">Fetch artist image</string>
    <string name="context_menu_open_in_play_store">Open in Play Store</string>
    <string name="context_menu_remove_from_recent">Remove from recent</string>
    <string name="context_menu_use_as_ringtone">Use as ringtone</string>
    <string name="context_menu_remove_from_playlist">Remove from playlist</string>

    <!-- Content descriptions -->
    <string name="accessibility_play">Play</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_prev">Previous</string>
    <string name="accessibility_shuffle">Shuffle</string>
    <string name="accessibility_shuffle_all">Shuffle all</string>
    <string name="accessibility_repeat">Repeat</string>
    <string name="accessibility_repeat_all">Repeat all</string>
    <string name="accessibility_repeat_one">Repeat one</string>

    <!-- Toast messages -->
    <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> pinned to your home screen</string>
    <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> could not be pinned to your home screen</string>
    <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' set as ringtone</string>
    <string name="theme_set"><xliff:g id="name">%s</xliff:g> set as the theme</string>

    <!-- Settings -->
    <string name="settings_ui_category">Interface</string>
    <string name="settings_storage_category">Storage</string>
    <string name="settings_data_category">Data</string>
    <string name="settings_about_category">About</string>
    <string name="settings_author_title">Author</string>
    <string name="settings_about_apollo">About Apollo</string>
    <string name="settings_special_thanks">Special thanks</string>
    <string name="settings_cyanogenmod_title" translatable="false">CyanogenMod</string>
    <string name="settings_self_title" translatable="false">Andrew Neal</string>
    <string name="settings_lopez_title" translatable="false">A.J. Lopez</string>
    <string name="settings_lopez_summary">Icon and Play Store banner design</string>
    <string name="settings_color_scheme_title">Choose Apollo\'s default color scheme</string>
    <string name="settings_color_scheme_summary">Changes the accent color in Apollo</string>
    <string name="settings_theme_chooser_title">Theme chooser</string>
    <string name="settings_delete_cache_title">Delete cache</string>
    <string name="settings_delete_cache_summary">Remove all cached images</string>
    <string name="settings_download_only_on_wifi_title">Download via Wi-Fi only</string>
    <string name="settings_download_only_on_wifi_summary">To reduce carrier charges, don\'t download over mobile networks</string>
    <string name="settings_download_missing_artwork_title">Download missing album art</string>
    <string name="settings_download_artist_images_title">Download missing artist images</string>
    <string name="settings_open_source_licenses">Open source licenses</string>
    <string name="settings_version_title">Version number</string>

    <!-- Share Intent -->
    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> by <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
    <string name="now_listening_to_no_artist_available">#NowPlaying <xliff:g id="title">%1$s</xliff:g> #FrostWire</string>
    <string name="share_track_using">Share track using:</string>

    <!-- ColorPicker -->
    <string name="color_picker_title">Color scheme</string>
    <string name="hex" translatable="false">#</string>
    <string name="current_color">Current</string>
    <string name="new_color">New</string>

    <!-- App widget -->
    <string name="app_widget_small" translatable="false">Apollo: 4×1</string>
    <string name="app_widget_large" translatable="false">Apollo: 4×2</string>
    <string name="app_widget_large_alt">Apollo: 4×2 (alternate)</string>
    <string name="app_widget_recent">Apollo: recently listened</string>
    <string name="app_widget_text_separator" translatable="false">-</string>

    <!-- What keywords to use when shopping for Apollo themes -->
    <string name="apollo_themes_shop_key" translatable="false">Apollo Themes</string>

    <!-- Empty list / error messages -->
    <string name="no_effects_for_you">The equalizer could not be opened.</string>
    <string name="empty_music">To copy music from your computer to your device, use a USB cable.</string>
    <string name="empty_last_added">Songs you have added over the last month will be shown here.</string>
    <string name="empty_search">No search results found</string>
    <string name="empty_favorite">Songs you mark as favorites will be shown here.</string>
    <string name="empty_recent">Albums you have listened to will show up here. Try playing some music.</string>
    <string name="frostwire_player">FrostWire Player</string>
</resources>
