<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 Andrew Neal
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_audio_player_add_to_playlist"
            android:showAsAction="never"
            android:title="@string/add_to_playlist"/>

    <item
            android:id="@+id/menu_audio_player_share"
            android:showAsAction="never"
            android:title="@string/menu_share"/>
    <item
            android:id="@+id/menu_audio_player_equalizer"
            android:showAsAction="never"
            android:title="@string/menu_equalizer"/>
    <item
            android:id="@+id/menu_audio_player_ringtone"
            android:showAsAction="never"
            android:title="@string/context_menu_use_as_ringtone"/>
    <item
            android:id="@+id/menu_audio_player_stop"
            android:showAsAction="never"
            android:title="@string/stop">
    </item>
    <item
            android:id="@+id/menu_audio_player_delete"
            android:showAsAction="never"
            android:title="@string/context_menu_delete"/>

</menu>
