<!--
    Created by Angel Leon (@gubatron), Alden Torres (aldenml)
    Copyright (c) 2011-2025, FrostWire(R). All rights reserved.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/contextmenu_icon_sort"
        android:title="@string/menu_sort_by"
        app:showAsAction="never"
        app:iconTint="@color/app_icon_primary">
        <menu>
            <item
                android:id="@+id/menu_player_sort_by_az"
                android:icon="@drawable/contextmenu_icon_sort_down"
                android:title="@string/sort_order_entry_az"
                app:iconTint="@color/app_icon_primary"/>
            <item
                android:id="@+id/menu_player_sort_by_za"
                android:icon="@drawable/contextmenu_icon_sort_up"
                android:title="@string/sort_order_entry_za"
                app:iconTint="@color/app_icon_primary"/>
            <item
                android:id="@+id/menu_player_sort_by_year"
                android:icon="@drawable/contextmenu_icon_year"
                android:title="@string/sort_order_entry_year"
                app:iconTint="@color/app_icon_primary"/>
            <item
                android:id="@+id/menu_player_sort_by_artist"
                android:icon="@drawable/contextmenu_icon_artist"
                android:title="@string/sort_order_entry_artist"
                app:iconTint="@color/app_icon_primary"/>
            <item
                android:id="@+id/menu_player_sort_by_number_of_songs"
                android:icon="@drawable/contextmenu_icon_song"
                android:title="@string/sort_order_entry_number_of_songs"
                app:iconTint="@color/app_icon_primary"/>
        </menu>
    </item>

</menu>
