<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml),
 * Copyright (c) 2011-2017, FrostWire(R). All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/contextmenu_icon_sort"
        android:title="@string/menu_sort_by"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_player_sort_by_az"
                android:icon="@drawable/contextmenu_icon_sort_down"
                android:title="@string/sort_order_entry_az" />
            <item
                android:id="@+id/menu_player_sort_by_za"
                android:icon="@drawable/contextmenu_icon_sort_up"
                android:title="@string/sort_order_entry_za" />
            <item
                android:id="@+id/menu_player_sort_by_year"
                android:icon="@drawable/contextmenu_icon_year"
                android:title="@string/sort_order_entry_year" />
            <item
                android:id="@+id/menu_player_sort_by_number_of_songs"
                android:icon="@drawable/contextmenu_icon_song"
                android:title="@string/sort_order_entry_number_of_songs" />
        </menu>
    </item>

</menu>
