<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml),
 * Copyright (c) 2011-2025, FrostWire(R). All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/menu_view_as"
        android:icon="@drawable/contextmenu_icon_view_as_detailed"
        app:showAsAction="never"
        app:iconTint="@color/app_icon_primary">
        <menu>
            <item
                android:id="@+id/menu_player_view_as_simple"
                android:icon="@drawable/contextmenu_icon_view_as_simple"
                android:title="@string/menu_simple"
                app:iconTint="@color/app_icon_primary"/>
            <item
                android:id="@+id/menu_player_view_as_detailed"
                android:icon="@drawable/contextmenu_icon_view_as_detailed"
                android:title="@string/menu_detailed"
                app:iconTint="@color/app_icon_primary"/>
            <item
                android:id="@+id/menu_player_view_as_grid"
                android:icon="@drawable/contextmenu_icon_view_as_grid"
                android:title="@string/menu_grid"
                app:iconTint="@color/app_icon_primary"/>
        </menu>
    </item>

</menu>
