<!--
    Created by Angel Leon (@gubatron), Alden Torres (aldenml)
    Copyright (c) 2011-2025, FrostWire(R). All rights reserved.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_player_audio_player_share"
        android:icon="@drawable/contextmenu_icon_send"
        android:title="@string/menu_share"
        app:showAsAction="never"
        app:iconTint="@color/app_icon_primary"/>
    <item
        android:id="@+id/menu_player_audio_player_add_to_playlist"
        android:icon="@drawable/contextmenu_icon_playlist_add_dark"
        android:title="@string/add_to_playlist"
        app:showAsAction="never"
        app:iconTint="@color/app_icon_primary"/>
    <item
        android:id="@+id/menu_player_audio_player_equalizer"
        android:icon="@drawable/contextmenu_icon_equalizer"
        android:title="@string/menu_equalizer"
        app:showAsAction="never"
        app:iconTint="@color/app_icon_primary"/>
    <item
        android:id="@+id/menu_player_audio_player_stop"
        android:icon="@drawable/contextmenu_icon_stop_playback"
        android:title="@string/stop"
        app:showAsAction="never"
        app:iconTint="@color/app_icon_primary"/>
    <item
        android:id="@+id/menu_player_audio_player_delete"
        android:icon="@drawable/contextmenu_icon_trash"
        android:title="@string/context_menu_delete"
        app:showAsAction="never"
        app:iconTint="@color/app_icon_primary"/>

</menu>
