<!--
    Created by Angel Leon (@gubatron), Alden Torres (aldenml)
    Copyright (c) 2011-2025, FrostWire(R). All rights reserved.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.andrew.apollo.widgets.RepeatButton
            android:id="@+id/action_button_repeat"
            android:layout_width="@dimen/audio_player_controls_end_button_width"
            android:layout_height="@dimen/audio_player_controls_end_button_height"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/accessibility_repeat"
            android:focusable="true"
            android:scaleType="centerInside"
            android:src="@drawable/btn_playback_repeat" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.andrew.apollo.widgets.RepeatingImageButton
            android:id="@+id/action_button_previous"
            android:layout_width="@dimen/audio_player_controls_main_button_width"
            android:layout_height="@dimen/audio_player_controls_main_button_height"
            android:layout_gravity="center"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/btn_playback_previous"
            android:tint="@color/app_icon_primary"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.andrew.apollo.widgets.PlayPauseButton
            android:id="@+id/action_button_play"
            android:layout_width="@dimen/audio_player_controls_main_button_width"
            android:layout_height="@dimen/audio_player_controls_main_button_height"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/accessibility_play"
            android:focusable="true"
            android:scaleType="centerInside"
            android:src="@drawable/btn_playback_play"
            android:tint="@color/app_icon_primary"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.andrew.apollo.widgets.RepeatingImageButton
            android:id="@+id/action_button_next"
            android:layout_width="@dimen/audio_player_controls_main_button_width"
            android:layout_height="@dimen/audio_player_controls_main_button_height"
            android:layout_gravity="center"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/btn_playback_next"
            android:tint="@color/app_icon_primary"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <com.andrew.apollo.widgets.ShuffleButton
            android:id="@+id/action_button_shuffle"
            android:layout_width="@dimen/audio_player_controls_end_button_width"
            android:layout_height="@dimen/audio_player_controls_end_button_height"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/accessibility_shuffle"
            android:scaleType="centerInside"
            android:src="@drawable/btn_playback_shuffle" />
    </FrameLayout>

</merge>
